--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base{
+    html, body {
+        max-width: 100vw;
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+    }
+}
